Added nice Rainbow button

--- a/src/netcore/WpfTestApp/App.xaml
+++ b/src/netcore/WpfTestApp/App.xaml
@@ -10,7 +10,8 @@
                 <ResourceDictionary Source="/WpfExtras;component/Icons.xaml" />
                 <ResourceDictionary Source="/WpfExtras;component/MiscColors.xaml" />
                 <ResourceDictionary Source="/WpfExtras;component/MetroColors.xaml"/>
-			</ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/WpfExtras;component/ButtonStyles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
          
     </Application.Resources>
